--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,6 +37,10 @@
     <!-- Section-->
     <section class="py-5">
         <div class="container px-4 px-lg-5 mt-5">
+            <!-- Product actions-->
+            <div class="p-4 pt-0 border-top-0 bg-transparent">
+                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{{url_for('refresh')}}">New Character</a></div>
+            </div>
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 <div class="col mb-5">
                     <div class="card h-100">
@@ -53,14 +57,30 @@
                                 </ul>
                             </div>
                         </div>
-                        <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{{url_for('refresh')}}">New Character</a></div>
-                        </div>
                     </div>
                 </div>
-                
-            </div>
+                <div class="col mb-5">
+                    <div class="card h-100">
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- Product name-->
+                                <h5 class="fw-bolder">Display STATS</h5>
+                                <!-- Product price-->
+                                <ul style="list-style-type: none; padding: 0; margin: 0;">
+                                    {% for char in stats %}
+                                    <li>{{char.name}} - {{char.displayed}}</li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>   
+            </div> 
+            <div class="p-4 pt-0 border-top-0 bg-transparent">
+                <div class="text-center"><a class="btn btn-outline-darkmt-auto" href="{{url_for('clear')}}">Clear Stats</a></div>
+            </div>   
+        </div>
         </div>
     </section>
     <!-- Footer-->
